Fixed height issues on iphone

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -57,8 +57,8 @@ h1, h2, h3, h4 {
 .main {
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 50px);
-    padding: 2rem;
+    height: 88vh;
+    padding: 1rem;
 }
 
 .foreground {
